# rop_scanner

./: .gitignore  CMakeLists.txt  README.md  README_ch.md  README_fr.md  README_ge.md  README_ru.md  README_ua.md  linux_build.sh  mac_build.sh  main.py  requirements.txt  rop_scanner.cpp  windows_build.bat
gui/: CMakeLists.txt
gui/src/: MainWindow.cpp  MainWindow.h  ScannerRunner.cpp  ScannerRunner.h  main.cpp
releases/: README.md  SHA256SUMS.txt
releases/console/console_apple-silicon/: rop_scanner
releases/console/console_linux_x64/: rop_scanner
releases/gui/apple-silicon/rop_scanner_gui.app/Contents/: Info.plist
releases/gui/apple-silicon/rop_scanner_gui.app/Contents/Frameworks/: libb2.1.dylib  libglib-2.0.0.dylib  libgraphite2.3.dylib  libgthread-2.0.0.dylib  libicui18n.78.dylib  libicuuc.78.dylib  libintl.8.dylib  libjpeg.8.dylib  liblzma.5.dylib  libmd4c.0.dylib  libpcre2-16.0.dylib  libwebpmux.3.dylib  libzstd.1.dylib
releases/gui/apple-silicon/rop_scanner_gui.app/Contents/Frameworks/QtDBus.framework/Versions/5/: QtDBus
releases/gui/apple-silicon/rop_scanner_gui.app/Contents/Frameworks/QtPrintSupport.framework/Versions/5/: QtPrintSupport
releases/gui/apple-silicon/rop_scanner_gui.app/Contents/MacOS/: rop_scanner_gui
releases/gui/apple-silicon/rop_scanner_gui.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib  libqmacheif.dylib  libqtga.dylib  libqwebp.dylib
releases/gui/apple-silicon/rop_scanner_gui.app/Contents/PlugIns/printsupport/: libcocoaprintersupport.dylib
releases/gui/apple-silicon/rop_scanner_gui.app/Contents/PlugIns/virtualkeyboard/: libqtvirtualkeyboard_openwnn.dylib  libqtvirtualkeyboard_pinyin.dylib  libqtvirtualkeyboard_tcime.dylib
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/Frameworks/: libdouble-conversion.3.dylib  libfreetype.6.dylib  libharfbuzz.0.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/Frameworks/QtNetwork.framework/Versions/5/: QtNetwork
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/Frameworks/QtQml.framework/Versions/5/: QtQml
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/Frameworks/QtQmlModels.framework/Versions/5/: QtQmlModels
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/Frameworks/QtSvg.framework/Versions/5/: QtSvg
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/Frameworks/QtVirtualKeyboard.framework/Versions/5/: QtVirtualKeyboard
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/PlugIns/imageformats/: libqicns.dylib  libqjpeg.dylib  libqmacjp2.dylib  libqtiff.dylib  libqwbmp.dylib
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/PlugIns/styles/: libqmacstyle.dylib
releases/gui/gui_apple-silicon/rop_scanner_gui.app/Contents/PlugIns/virtualkeyboard/: libqtvirtualkeyboard_hangul.dylib  libqtvirtualkeyboard_thai.dylib
releases/gui/gui_linux_x64/: rop_scanner_gui
rop_scanner/: __init__.py  gadget.py  pe_parser.py  scanner.py
src/: gadget.cpp  gadget.h  main.cpp  output.h  output_json.cpp  output_pwntools.cpp  output_ropper.cpp  output_text.cpp  pe_loader.cpp  pe_loader.h  pe_types.h  scanner.cpp  scanner.h  symbol_resolver.cpp  symbol_resolver.h
tests/: test_scanner.py
(+15 files in other folders)
